--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "command-demo",
   "version": "0.1.0",
-  "scripts": {},
+  "scripts": {
+    "start": "gulp serve-static"
+  },
   "devDependencies": {
     "chalk": "^1.1.1",
     "gulp": "^3.9.0",
